# mindarchive-hub

./: .env.example  .gitignore  CLAUDE.md  next.config.mjs  package-lock.json  package.json  pyproject.toml
src/app/: globals.css  layout.tsx
src/app/dashboard/: page.tsx
src/app/profiles/: page.tsx
src/app/projects/: page.tsx
src/app/settings/: page.tsx
src/components/: topic-bank-list.tsx
src/components/assets/: AssetGrid.tsx  AssetSlot.tsx
src/components/layout/: sidebar.tsx
src/components/pipeline/: StepOutputRenderer.tsx  StepRow.tsx  constants.ts
src/components/ui/: badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  select.tsx  textarea.tsx
src/lib/: asset-db.ts  asset-patch.ts  asset-sync.ts  asset-validation.ts  storage.ts  store.ts  utils.ts
src/lib/pipeline/: executors.ts  extract-narration.ts  initialize-asset-slots.ts  on-project-complete.ts  parse-visual-scenes.ts  prompts.ts  reconcile-pooled-assets.ts  steps.ts
src/lib/providers/: anthropic.ts  elevenlabs.ts  openai.ts  pexels.ts  runway.ts
src/lib/video/: assembler.ts  render-package.ts
src/mindarchive/: __init__.py  cli.py
src/mindarchive/config/: __init__.py  constants.py  settings.py
src/types/: index.ts
supabase/: schema.sql
supabase/migrations/: 001_asset_management.sql  003_profile_asset_sources.sql  004_topic_bank.sql  005_enable_rls.sql
tests/: conftest.py  test_config.py  test_database.py  test_distribution.py  test_pipeline.py  test_production.py  test_profiles.py  test_services.py  test_web.py
worker/: .env.example  Dockerfile  package-lock.json  package.json
worker/src/: assembler.ts  filter-graph.ts  motion-graphic-renderer.ts  r2-upload.ts  scene-handlers.ts  server.ts  timing-from-audio.ts  types.ts
(+153 files in other folders)
